# ocsf-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  SECURITY.md  all.html  cargo-docs-coverage.sh  index.html  sidebar-items.js  static.OCSF_SCHEMA_VERSION.html
.github/: CONTRIBUTING.md  dependabot.yml  stale.yml
.github/workflows/: clippy.yml  dependabot_auto_merge.yml  github_pages.yml  rust_test.yml
categories/: enum.Category.html  index.html  sidebar-items.js
dictionary/: constant.ACCESSED_TIME.html  constant.ACCESSOR.html  constant.ACCESS_LIST.html  constant.ACCESS_MASK.html  constant.ACCESS_RESULT.html  constant.ACCOUNT_NAME.html  constant.ACCOUNT_TYPE.html  constant.ACCOUNT_TYPE_ID.html  constant.ACCOUNT_UID.html  constant.ACTIVITY_ID.html  constant.ACTIVITY_NAME.html  constant.ACTOR.html  constant.ACTUAL_PERMISSIONS.html  constant.ALERT.html  constant.ALGORITHM.html  constant.ALGORITHM_ID.html  constant.ANSWERS.html  constant.API.html  constant.APP_NAME.html  constant.ARCHITECTURE.html  constant.ARGS.html  constant.ATTACKS.html  constant.ATTEMPT.html  constant.ATTRIBUTES.html  constant.AUTHORIZATIONS.html  constant.AUTH_PROTOCOL.html  constant.AUTH_PROTOCOL_ID.html  constant.AUTH_TYPE.html  constant.AUTH_TYPE_ID.html  constant.AUTOSCALE_UID.html  constant.BANNER.html  constant.BASE_ADDRESS.html  constant.BASE_SCORE.html  constant.BIG_ENDIAN.html  constant.BIOS_DATE.html  constant.BIOS_MANUFACTURER.html  constant.BIOS_VER.html  constant.BOUNDARY.html  constant.BOUNDARY_ID.html  constant.BUILD.html  (+400 more)
events/: index.html
examples/: Cargo.toml
examples/examples/: test.rs
objects/: index.html
ocsf/: Cargo.toml  README.md
ocsf-codegen/: Cargo.toml  README.md
ocsf-codegen/src/: categories.rs  dictionary.rs  enums.rs  errors.rs  events.rs  lib.rs  main.rs  module.rs  objects.rs  other.rs  profiles.rs
ocsf-codegen/templates/: Cargo.toml
ocsf/src/: categories.rs  dictionary.rs  events.rs  lib.rs  objects.rs  other.rs  profiles.rs
ocsf/src/enums/: authorization.rs  defaults.rs  dns_activity.rs  file_activity.rs  kernel_activity.rs  kernel_extension_activity.rs  memory_activity.rs  mod.rs  module_activity.rs  network_activity.rs  process_activity.rs  registry_key_activity.rs  registry_value_activity.rs
ocsf/src/events/: application.rs  audit.rs  discovery.rs  findings.rs  iam.rs  inventory.rs  mod.rs  network.rs  system.rs
ocsf/src/events/system/: windows.rs
ocsf/tests/: other.rs
profiles/: index.html
