[workspace]
members = ["ocsf-codegen", "ocsf"]
resolver = "2"

[workspace.package]
version = "0.0.1-alpha2"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
rust-version = "1.66"
edition = "2021"
license = "MPL-2.0"
homepage = "https://yaleman.github.io/ocsf-rs/"
repository = "https://github.com/yaleman/ocsf-rs/"
documentation = "https://github.com/yaleman/ocsf-rs/"


[workspace.dependencies]
clap = { version = "4.5.8" }
lazy_static = "1.5.0"
serde = { version = "1.0.203", features = ["derive"] }
chrono = "0.4.38"
codegen = "0.2.0"
env_logger = "0.10.2"
glob = "0.3.1"
itertools = "0.11.0"
last-git-commit = "0.2.0"
log = "0.4.22"
regex = "1.10.5"
serde_json = "1.0.118"
serde_with = "3.8.3"
string_morph = "0.1.0"
walkdir = "2.5.0"
