[workspace]
members = ["ocsf-codegen", "ocsf"]
resolver = "2"

[workspace.package]
version = "0.0.1-alpha5"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
rust-version = "1.87.0"
edition = "2021"
license = "MPL-2.0"
homepage = "https://yaleman.github.io/ocsf-rs/"
repository = "https://github.com/yaleman/ocsf-rs/"
documentation = "https://github.com/yaleman/ocsf-rs/"


[workspace.dependencies]
clap = { version = "4.5.50" }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
codegen = "0.2.0"
env_logger = "0.11.8"
glob = "0.3.3"
itertools = "0.14.0"
last-git-commit = "0.2.0"
log = "0.4.28"
regex = "1.12.2"
serde_json = "1.0.145"
serde_with = "3.15.1"
string_morph = "0.1.0"
walkdir = "2.5.0"
