[package]
name = "ocsf-codegen"
description = "Codegen package for the OCSF crate"
documentation = {workspace = true}
edition = {workspace = true}
license = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace=true}

[badges]
maintenance = { status = "experimental" }

[features]
warn_undocumented = []

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = [ "clock"] }
clap = { version = "4.1.11", features = ["derive"] }
codegen = "0.2.0"
env_logger = "0.10.0"
glob = "0.3.1"
itertools = "0.10.5"
last-git-commit = "0.2.0"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.7.2"
serde = { version = "1.0.158", features = ["derive", "serde_derive"] }
serde_json = { workspace = true }
string_morph = "0.1.0"
walkdir = "2.3.3"

[[bin]]
name = "ocsf-codegen"
