[package]
name = "ocsf-codegen"
description = "Codegen package for the OCSF crate"
documentation = {workspace = true}
edition = {workspace = true}
license = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace=true}


[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.12", features = ["derive"] }
codegen = "0.2.0"
env_logger = "0.10.0"
glob = "0.3.1"
itertools = "0.11.0"
last-git-commit = "0.2.0"
lazy_static = "1.4.0"
log = "0.4.19"
regex = "1.9.1"
serde = { version = "1.0.174", features = ["derive", "serde_derive"] }
serde_json = "1.0.103"
string_morph = "0.1.0"
walkdir = "2.3.3"

[[bin]]
name = "ocsf-codegen"
