[package]
name = "ocsf-codegen"
description = "Codegen package for the OCSF crate"
documentation = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive", "serde_derive"] }
chrono = { workspace = true }
codegen = { workspace = true }
env_logger = { workspace = true }
glob = { workspace = true }
itertools = { workspace = true }
last-git-commit = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
string_morph = { workspace = true }
walkdir = { workspace = true }

[[bin]]
name = "ocsf-codegen"
