[package]
name = "ocsf"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.157", features = ["derive"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# codegen = "0.2.0"
# serde_json = "1.0.94"
# string_morph = "0.1.0"
# walkdir = "2.3.3"

