[package]
name = "ocsf"
description = "OCSF read/write methods"
documentation = {workspace = true}
edition = {workspace = true}
license = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace=true}


[lib]
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.160", features = ["derive"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# codegen = "0.2.0"
# serde_json = "1.0.94"
# string_morph = "0.1.0"
# walkdir = "2.3.3"

