[package]
name = "ocsf"
description = "OCSF read/write methods"
documentation = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.183", features = ["derive"] }
