[package]
name = "ocsf"
description = "OCSF read/write methods"
documentation = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
